fix UI issues with qtfeed page

--- a/XamarinDemo/XamarinDemo/Views/QualitestFeedPage.xaml
+++ b/XamarinDemo/XamarinDemo/Views/QualitestFeedPage.xaml
@@ -10,10 +10,10 @@
             <ListView ItemsSource="{Binding Feeds}" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <ViewCell>
-                            <Frame Margin="0,5" BorderColor="Black" CornerRadius="10">
+                        <ViewCell Height="300">
+                            <Frame Margin="0,5" BorderColor="Black" CornerRadius="10" HeightRequest="300">
                                 <StackLayout>
-                                    <StackLayout Orientation="Horizontal">
+                                    <StackLayout Orientation="Vertical">
                                         <Label Text="{Binding Title}" Style="{StaticResource CaptionLabelStyle}"/>
                                     </StackLayout>
                                     <BoxView HeightRequest="1" BackgroundColor="Black" HorizontalOptions="FillAndExpand" />
